# Isotope

./: .gitignore  Cargo.toml  README.md  build.rs  debug-log.txt  isotope-log.txt  test-config.json  test-log.txt
.claude/: settings.local.json
.github/: copilot-instructions.md
examples/: ubuntu-minecraft.isotope  ubuntu-server.isotope  ubuntu-server.json  windows-11.json
scripts/: startup.sh
src/: cli.rs  lib.rs  main.rs
src/automation/: keyboard_input.rs  keypress.rs  library_keyboard_input.rs  mod.rs  models.rs  ocr.rs  provision.rs  puppet.rs  vm.rs
src/automation/vm/: instance.rs  manager.rs  mod.rs
src/automation/vm/providers/: hyperv.rs  mod.rs  qemu.rs  virtualbox.rs  vmware.rs
src/config/: converter.rs  mod.rs  parser.rs  schema.rs  validation.rs  validator.rs
src/core/: builder.rs  mod.rs  modifier.rs  tester.rs
src/iso/: boot.rs  extract.rs  extractor.rs  mod.rs  package.rs  packager.rs
src/utils/: checksum.rs  fs.rs  mod.rs  net.rs  template.rs  vm_metadata.rs
