[package]
name = "isotope"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A flexible, OS-agnostic ISO builder for automated deployments"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/isotope"
keywords = ["iso", "automation", "vm", "deployment", "installer"]
categories = ["command-line-utilities"]

[dependencies]
# Command line parsing
clap = { version = "4.4", features = ["derive"] }
structopt = "0.3"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Template rendering
handlebars = "4.4"
tera = "1.19"

# Filesystem manipulation
tempfile = "3.8"
walkdir = "2.4"
fs_extra = "1.3"

# Progress reporting
indicatif = "0.17"
console = "0.15"

# Checksum verification
sha2 = "0.10"
hex = "0.4"

# Concurrency utilities
rayon = "1.8"
crossbeam = "0.8"

# Path manipulation
pathdiff = "0.2"
path-clean = "1.0"

# Configuration validation
jsonschema = "0.17"
regex = "1.10"

ssh2 = "0.9"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Async traits
async-trait = "0.1"
image = "0.25.6"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
# Unix-specific dependencies
iso9660 = "0.1"
# Only include these on Unix systems
libc = "0.2"
nix = "0.27"

[target.'cfg(windows)'.dependencies]
# Windows-specific dependencies
windows = { version = "0.51", features = ["Win32_Storage_FileSystem"] }
# Windows SSH alternative
# Only use this on Windows systems
powershell_script = "1.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
mockall = "0.12"
test-case = "3.3"
rstest = "0.18"
tempdir = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[[bin]]
name = "isotope"
path = "src/main.rs"
